# Labs

./: CMakeLists.txt  json.cpp  json.h  profile.h  test_runner.h  transport.cpp  transport_p.cpp
Brown/Brown_1_week/: hash_person.cpp  hash_point.cpp  hash_set.cpp  secondary_index.cpp  set_iterator_next.cpp
Brown/Brown_2_week/: collide.cpp  comment_server.cpp  geo2d.cpp  geo2d.h  ini.cpp  ini.h  json.cpp  refactoring.cpp  spendings_json.cpp  spendings_xml.cpp  test_ini.cpp  xml.cpp  xml.h
Brown/Brown_3_week/: Common.h  concurrent_map_2.cpp  lazy_value.cpp  main_tree.cpp  pipeline.cpp  polynomial.cpp  print_stats_2.cpp
Brown/Brown_4_week/: Solution_cache.cpp  Solution_textures.cpp  Textures.cpp  Textures.h  booking.h  main_cache.cpp  main_textures.cpp  new_trip_manager.h  old_booking_providers.h  old_trip_manager.h  test.cpp  unique_ptr.cpp
Brown/Brown_5_week/: budget.cpp  budget_bad_base.cpp  budget_bad_base_old.cpp  budget_good_base.cpp  budget_good_base_old.cpp  domains.cpp  print_stats_function_with_tests.cpp  team_tasks.cpp  test_domains.cpp
Brown/Brown_course_project/: RouteManager_2.cpp  my_json.cpp  my_json.h
BrownBelt/: RouteManager_2.cpp
Red/Red_1_week/: airline_ticket.h  deque.cpp  paginator.cpp  sort_by.cpp  table.cpp  uniq_id.cpp  update_field.cpp
Red/Red_2_week/: booking.cpp  e-book-fast.cpp
Red/Red_3_week/: linked_list.cpp  object_pool.cpp  simple_vector.cpp  simple_vector.h  swap_sort_copy.cpp
Red/Red_4_week/: airport_counter.cpp  athlets.cpp  stack_vector.cpp  stack_vector.h  stats.cpp  stats.h  text_editor.cpp  translator.cpp
Red/Red_5_week/: concurrent_map.cpp  explore_key_words.cpp  group_heavy_string.cpp  josephus_permutation.cpp  matrix_sum.cpp  merge_sort_move.cpp  priority_collection.cpp  simple_vector_2.cpp  simple_vector_2.h  split_into_sentences.cpp  synchronized.cpp
Red/Red_course_project/: main.cpp  search_server.cpp  search_server.h
Yellow_course_project/: condition_parser.cpp  database.cpp  database.h  date.cpp  date.h  main.cpp  node.cpp  node.h  token.cpp  token.h
busAndStops/: bus_manager.cpp  bus_manager.h  responses.cpp  responses.h
